src/parser.c
/* A recursive-descent parser generated by cdescent 0.0.1 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
struct _CDESCENT;
#define YYRULECOUNT 36


#include "cdescent.h"
#include <stdio.h>
#include <stdlib.h>
#include <unistd.h>
#include <string.h>
#include <libgen.h>
#include <assert.h>

typedef struct Header Header;

struct Header {
  char   *text;
  Header *next;
};

FILE *input= 0;

int   verboseFlag= 0;

static int   lineNumber= 0;
static char *filename= 0;
static char *trailer= 0;
static Header *headers= 0;

void makeHeader(char *text);
void makeTrailer(char *text);

void yyerror(struct _CDESCENT *, char *message);

#define YY_INPUT(buf, result, max) {\
    int c= getc(input); \
    if ('\n' == c || '\r' == c) ++lineNumber; \
    result= (EOF == c) ? 0 : (*(buf)= c, 1);  \
  }

#define YY_LOCAL(T)  static T
#define YY_RULE(T) static T


#ifndef YY_ALLOC
#define YY_ALLOC(N, D) malloc(N)
#endif
#ifndef YY_CALLOC
#define YY_CALLOC(N, S, D) calloc(N, S)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(B, N, D) realloc(B, N)
#endif
#ifndef YY_FREE
#define YY_FREE free
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T) static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)  static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)  static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T) T
#endif
#ifndef YY_NAME
#define YY_NAME(N) yy##N
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)     \
  {             \
    int yyc= getchar();         \
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);  \
    yyprintf((stderr, "<%c>", yyc));      \
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN  ( G->begin= G->pos, 1)
#endif
#ifndef YY_END
#define YY_END    ( G->end= G->pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args) fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE int
#endif
#ifndef YY_XTYPE
#define YY_XTYPE void *
#endif
#ifndef YY_XVAR
#define YY_XVAR yydata
#endif

#ifndef YY_PART
#define yy G->ss

typedef void (*yyaction)(struct _CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

typedef struct _CDESCENT {
  char *buf;
  int buflen;
  int pos;
  int limit;
  char *text;
  int textlen;
  int begin;
  int end;
  yythunk *thunks;
  int thunkslen;
  int thunkpos;
  YYSTYPE ss;
  YYSTYPE *val;
  YYSTYPE *vals;
  int valslen;
  YY_XTYPE data;
} CDESCENT;

YY_LOCAL(int) yyrefill(CDESCENT *G)
{
  int yyn;
  YY_XTYPE YY_XVAR = (YY_XTYPE)G->data;
  while (G->buflen - G->pos < 512)
    {
      G->buflen *= 2;
      G->buf= YY_REALLOC(G->buf, G->buflen, G->data);
    }
  YY_INPUT((G->buf + G->pos), yyn, (G->buflen - G->pos));
  if (!yyn) return 0;
  G->limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(CDESCENT *G)
{
  if (G->pos >= G->limit && !yyrefill(G)) return 0;
  ++G->pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(CDESCENT *G, int c)
{
  if (G->pos >= G->limit && !yyrefill(G)) return 0;
  if ((unsigned char)G->buf[G->pos] == c)
    {
      ++G->pos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, G->buf+G->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, G->buf+G->pos));
  return 0;
}

YY_LOCAL(int) yymatchString(CDESCENT *G, char *s)
{
  int yysav= G->pos;
  while (*s)
    {
      if (G->pos >= G->limit && !yyrefill(G)) return 0;
      if (G->buf[G->pos] != *s)
        {
          G->pos= yysav;
          return 0;
        }
      ++s;
      ++G->pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(CDESCENT *G, unsigned char *bits)
{
  int c;
  if (G->pos >= G->limit && !yyrefill(G)) return 0;
  c= (unsigned char)G->buf[G->pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++G->pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", G->buf+G->pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", G->buf+G->pos));
  return 0;
}

YY_LOCAL(void) yyDo(CDESCENT *G, yyaction action, int begin, int end)
{
  while (G->thunkpos >= G->thunkslen)
    {
      G->thunkslen *= 2;
      G->thunks= YY_REALLOC(G->thunks, sizeof(yythunk) * G->thunkslen, G->data);
    }
  G->thunks[G->thunkpos].begin=  begin;
  G->thunks[G->thunkpos].end=    end;
  G->thunks[G->thunkpos].action= action;
  ++G->thunkpos;
}

YY_LOCAL(int) yyText(CDESCENT *G, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (G->textlen < (yyleng - 1))
  {
    G->textlen *= 2;
    G->text= YY_REALLOC(G->text, G->textlen, G->data);
  }
      memcpy(G->text, G->buf + begin, yyleng);
    }
  G->text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(CDESCENT *G)
{
  int pos;
  for (pos= 0;  pos < G->thunkpos;  ++pos)
    {
      yythunk *thunk= &G->thunks[pos];
      int yyleng= thunk->end ? yyText(G, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, G->text));
      thunk->action(G, G->text, yyleng, G->data);
    }
  G->thunkpos= 0;
}

YY_LOCAL(void) yyCommit(CDESCENT *G)
{
  if ((G->limit -= G->pos))
    {
      memmove(G->buf, G->buf + G->pos, G->limit);
    }
  G->begin -= G->pos;
  G->end -= G->pos;
  G->pos= G->thunkpos= 0;
}

YY_LOCAL(int) yyAccept(CDESCENT *G, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(G);
      yyCommit(G);
    }
  return 1;
}

YY_LOCAL(void) yyPush(CDESCENT *G, char *text, int count, YY_XTYPE YY_XVAR) {
  size_t off = (G->val - G->vals) + count;
  if (off > G->valslen) {
    while (G->valslen < off + 1)
      G->valslen *= 2;
    G->vals= YY_REALLOC((void *)G->vals, sizeof(YYSTYPE) * G->valslen, G->data);
    G->val= G->vals + off;
  } else {
    G->val += count;
  }
}
YY_LOCAL(void) yyPop(CDESCENT *G, char *text, int count, YY_XTYPE YY_XVAR)  { G->val -= count; }
YY_LOCAL(void) yySet(CDESCENT *G, char *text, int count, YY_XTYPE YY_XVAR)  { G->val[count]= G->ss; }

#endif /* YY_PART */

#define YYACCEPT  yyAccept(G, yythunkpos0)

YY_RULE(int) yy_end_of_line(CDESCENT *G); /* 36 */
YY_RULE(int) yy_comment(CDESCENT *G); /* 35 */
YY_RULE(int) yy_space(CDESCENT *G); /* 34 */
YY_RULE(int) yy_braces(CDESCENT *G); /* 33 */
YY_RULE(int) yy_range(CDESCENT *G); /* 32 */
YY_RULE(int) yy_char(CDESCENT *G); /* 31 */
YY_RULE(int) yy_END(CDESCENT *G); /* 30 */
YY_RULE(int) yy_BEGIN(CDESCENT *G); /* 29 */
YY_RULE(int) yy_DOT(CDESCENT *G); /* 28 */
YY_RULE(int) yy_class(CDESCENT *G); /* 27 */
YY_RULE(int) yy_literal(CDESCENT *G); /* 26 */
YY_RULE(int) yy_CLOSE(CDESCENT *G); /* 25 */
YY_RULE(int) yy_OPEN(CDESCENT *G); /* 24 */
YY_RULE(int) yy_COLON(CDESCENT *G); /* 23 */
YY_RULE(int) yy_PLUS(CDESCENT *G); /* 22 */
YY_RULE(int) yy_STAR(CDESCENT *G); /* 21 */
YY_RULE(int) yy_QUESTION(CDESCENT *G); /* 20 */
YY_RULE(int) yy_primary(CDESCENT *G); /* 19 */
YY_RULE(int) yy_NOT(CDESCENT *G); /* 18 */
YY_RULE(int) yy_suffix(CDESCENT *G); /* 17 */
YY_RULE(int) yy_action(CDESCENT *G); /* 16 */
YY_RULE(int) yy_AND(CDESCENT *G); /* 15 */
YY_RULE(int) yy_prefix(CDESCENT *G); /* 14 */
YY_RULE(int) yy_BAR(CDESCENT *G); /* 13 */
YY_RULE(int) yy_sequence(CDESCENT *G); /* 12 */
YY_RULE(int) yy_SEMICOLON(CDESCENT *G); /* 11 */
YY_RULE(int) yy_expression(CDESCENT *G); /* 10 */
YY_RULE(int) yy_EQUAL(CDESCENT *G); /* 9 */
YY_RULE(int) yy_identifier(CDESCENT *G); /* 8 */
YY_RULE(int) yy_RPERCENT(CDESCENT *G); /* 7 */
YY_RULE(int) yy_end_of_file(CDESCENT *G); /* 6 */
YY_RULE(int) yy_trailer(CDESCENT *G); /* 5 */
YY_RULE(int) yy_definition(CDESCENT *G); /* 4 */
YY_RULE(int) yy_declaration(CDESCENT *G); /* 3 */
YY_RULE(int) yy__(CDESCENT *G); /* 2 */
YY_RULE(int) yy_grammar(CDESCENT *G); /* 1 */

YY_ACTION(void) yy_9_primary(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_9_primary\n"));
   push(makePredicate("YY_END")); ;
}
YY_ACTION(void) yy_8_primary(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_8_primary\n"));
   push(makePredicate("YY_BEGIN")); ;
}
YY_ACTION(void) yy_7_primary(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_7_primary\n"));
   push(makeAction(yytext)); ;
}
YY_ACTION(void) yy_6_primary(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_6_primary\n"));
   push(makeDot()); ;
}
YY_ACTION(void) yy_5_primary(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_5_primary\n"));
   push(makeClass(yytext)); ;
}
YY_ACTION(void) yy_4_primary(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_4_primary\n"));
   push(makeString(yytext)); ;
}
YY_ACTION(void) yy_3_primary(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_3_primary\n"));
   push(makeName(findRule(yytext, 0))); ;
}
YY_ACTION(void) yy_2_primary(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_2_primary\n"));
   Node *name= makeName(findRule(yytext, 0));  name->name.variable= pop();  push(name); ;
}
YY_ACTION(void) yy_1_primary(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_primary\n"));
   push(makeVariable(yytext)); ;
}
YY_ACTION(void) yy_3_suffix(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_3_suffix\n"));
   push(makePlus (pop())); ;
}
YY_ACTION(void) yy_2_suffix(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_2_suffix\n"));
   push(makeStar (pop())); ;
}
YY_ACTION(void) yy_1_suffix(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_suffix\n"));
   push(makeQuery(pop())); ;
}
YY_ACTION(void) yy_3_prefix(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_3_prefix\n"));
   push(makePeekNot(pop())); ;
}
YY_ACTION(void) yy_2_prefix(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_2_prefix\n"));
   push(makePeekFor(pop())); ;
}
YY_ACTION(void) yy_1_prefix(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_prefix\n"));
   push(makePredicate(yytext)); ;
}
YY_ACTION(void) yy_1_sequence(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_sequence\n"));
   Node *f= pop();  push(Sequence_append(pop(), f)); ;
}
YY_ACTION(void) yy_1_expression(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_expression\n"));
   Node *f= pop();  push(Alternate_append(pop(), f)); ;
}
YY_ACTION(void) yy_2_definition(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
#define s G->val[-1]
  yyprintf((stderr, "do yy_2_definition\n"));
   Node *e= pop();  Rule_setExpression(pop(), e); ;
#undef s
}
YY_ACTION(void) yy_1_definition(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
#define s G->val[-1]
  yyprintf((stderr, "do yy_1_definition\n"));
   if (push(beginRule(findRule(yytext, s)))->rule.expression)
                  fprintf(stderr, "rule '%s' redefined\n", yytext); ;
#undef s
}
YY_ACTION(void) yy_1_trailer(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_trailer\n"));
   makeTrailer(yytext); ;
}
YY_ACTION(void) yy_1_declaration(CDESCENT *G, char *yytext, int yyleng, YY_XTYPE YY_XVAR)
{
  yyprintf((stderr, "do yy_1_declaration\n"));
   makeHeader(yytext); ;
}

YY_RULE(int) yy_end_of_line(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "end_of_line"));
  {  int yypos2= G->pos, yythunkpos2= G->thunkpos;  if (!yymatchString(G, "\r\n")) goto l3;  goto l2;
  l3:;	  G->pos= yypos2; G->thunkpos= yythunkpos2;  if (!yymatchChar(G, '\n')) goto l4;  goto l2;
  l4:;	  G->pos= yypos2; G->thunkpos= yythunkpos2;  if (!yymatchChar(G, '\r')) goto l1;
  }
  l2:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "end_of_line", G->buf+G->pos));
  return 1;
  l1:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "end_of_line", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_comment(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "comment"));  if (!yymatchChar(G, '#')) goto l5;
  l6:;	
  {  int yypos7= G->pos, yythunkpos7= G->thunkpos;
  {  int yypos8= G->pos, yythunkpos8= G->thunkpos;  if (!yy_end_of_line(G)) goto l8;  goto l7;
  l8:;	  G->pos= yypos8; G->thunkpos= yythunkpos8;
  }  if (!yymatchDot(G)) goto l7;  goto l6;
  l7:;	  G->pos= yypos7; G->thunkpos= yythunkpos7;
  }  if (!yy_end_of_line(G)) goto l5;
  yyprintf((stderr, "  ok   %s @ %s\n", "comment", G->buf+G->pos));
  return 1;
  l5:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "comment", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_space(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "space"));
  {  int yypos10= G->pos, yythunkpos10= G->thunkpos;  if (!yymatchChar(G, ' ')) goto l11;  goto l10;
  l11:;	  G->pos= yypos10; G->thunkpos= yythunkpos10;  if (!yymatchChar(G, '\t')) goto l12;  goto l10;
  l12:;	  G->pos= yypos10; G->thunkpos= yythunkpos10;  if (!yy_end_of_line(G)) goto l9;
  }
  l10:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "space", G->buf+G->pos));
  return 1;
  l9:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "space", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_braces(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "braces"));
  {  int yypos14= G->pos, yythunkpos14= G->thunkpos;  if (!yymatchChar(G, '{')) goto l15;
  l16:;	
  {  int yypos17= G->pos, yythunkpos17= G->thunkpos;
  {  int yypos18= G->pos, yythunkpos18= G->thunkpos;  if (!yymatchChar(G, '}')) goto l18;  goto l17;
  l18:;	  G->pos= yypos18; G->thunkpos= yythunkpos18;
  }  if (!yymatchDot(G)) goto l17;  goto l16;
  l17:;	  G->pos= yypos17; G->thunkpos= yythunkpos17;
  }  if (!yymatchChar(G, '}')) goto l15;  goto l14;
  l15:;	  G->pos= yypos14; G->thunkpos= yythunkpos14;
  {  int yypos19= G->pos, yythunkpos19= G->thunkpos;  if (!yymatchChar(G, '}')) goto l19;  goto l13;
  l19:;	  G->pos= yypos19; G->thunkpos= yythunkpos19;
  }  if (!yymatchDot(G)) goto l13;
  }
  l14:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "braces", G->buf+G->pos));
  return 1;
  l13:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "braces", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_range(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "range"));
  {  int yypos21= G->pos, yythunkpos21= G->thunkpos;  if (!yy_char(G)) goto l22;  if (!yymatchChar(G, '-')) goto l22;  if (!yy_char(G)) goto l22;  goto l21;
  l22:;	  G->pos= yypos21; G->thunkpos= yythunkpos21;  if (!yy_char(G)) goto l20;
  }
  l21:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "range", G->buf+G->pos));
  return 1;
  l20:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "range", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_char(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "char"));
  {  int yypos24= G->pos, yythunkpos24= G->thunkpos;  if (!yymatchChar(G, '\\')) goto l25;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\204\000\000\000\000\000\000\070\146\100\124\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l25;  goto l24;
  l25:;	  G->pos= yypos24; G->thunkpos= yythunkpos24;  if (!yymatchChar(G, '\\')) goto l26;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\000\017\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l26;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l26;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l26;  goto l24;
  l26:;	  G->pos= yypos24; G->thunkpos= yythunkpos24;  if (!yymatchChar(G, '\\')) goto l27;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l27;
  {  int yypos28= G->pos, yythunkpos28= G->thunkpos;  if (!yymatchClass(G, (unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l28;  goto l29;
  l28:;	  G->pos= yypos28; G->thunkpos= yythunkpos28;
  }
  l29:;	  goto l24;
  l27:;	  G->pos= yypos24; G->thunkpos= yythunkpos24;
  {  int yypos30= G->pos, yythunkpos30= G->thunkpos;  if (!yymatchChar(G, '\\')) goto l30;  goto l23;
  l30:;	  G->pos= yypos30; G->thunkpos= yythunkpos30;
  }  if (!yymatchDot(G)) goto l23;
  }
  l24:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "char", G->buf+G->pos));
  return 1;
  l23:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "char", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_END(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "END"));  if (!yymatchChar(G, '>')) goto l31;  if (!yy__(G)) goto l31;
  yyprintf((stderr, "  ok   %s @ %s\n", "END", G->buf+G->pos));
  return 1;
  l31:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "END", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_BEGIN(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "BEGIN"));  if (!yymatchChar(G, '<')) goto l32;  if (!yy__(G)) goto l32;
  yyprintf((stderr, "  ok   %s @ %s\n", "BEGIN", G->buf+G->pos));
  return 1;
  l32:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "BEGIN", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_DOT(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "DOT"));  if (!yymatchChar(G, '.')) goto l33;  if (!yy__(G)) goto l33;
  yyprintf((stderr, "  ok   %s @ %s\n", "DOT", G->buf+G->pos));
  return 1;
  l33:;	  G->pos= yypos0; G->thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DOT", G->buf+G->pos));
  return 0;
}
YY_RULE(int) yy_class(CDESCENT *G)
{  int yypos0= G->pos, yythunkpos0= G->thunkpos;
  yyprintf((stderr, "%s\n", "class"));  if (!yymatchChar(G, '[')) goto l34;  yyText(G, G->begin, G->end);  if (!(YY_BEGIN)) goto l34;
  l35:;	
  {  int yypos36= G->pos, yythunkpos36= G->thunkpos;
  {  int yypos37= G->pos, yythunkpos37= G->thunkpos;  if (!yymatchChar(G, ']')) goto l37;  goto l36;
  l37:;	  G->pos= yypos37; G->thunkpos= yythunkpos37;
  }  if (!yy_range(G)) goto l36;  goto l35;
  l36:;	  G->pos= yypos36; G->thunkpos= yythunkpos36;
